--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <!--=============== FAVICON ===============-->
       <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-      <!--=============== REMIX ICONS ===============-->
+      <!--=============== ICONS ===============-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.7.0/remixicon.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
@@ -58,17 +59,136 @@
       <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-
+          <div class="home__container container grid">
+            <h1 class="home__name">
+              Iratxe Garrido
+            </h1>
+            <div class="home__perfil">
+              <div class="home__image">
+                <img src="assets/img/iratxe.jpeg" alt="image" class="home__img">
+                <div class="home__shadow"></div>
+                <img src="assets/img/curved-arrow.svg" alt="" class="home__arrow">
+                <img src="assets/img/random-lines.svg" alt="" class="home__line">
+                <div class="geometric-box"></div>
+              </div>
+              <div class="home__social">
+                <a href="https://github.com/IratxeGarrido" target="_blank" class="home__social-link">
+                  <i class="fa-brands fa-github" style="color: #ffffff;"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="home__social-link">
+                  <i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i>
+                </a>
+              </div>
+            </div>
+            <div class="home__info">
+              <p class="home__description">
+                <b>Fullstack Developer</b>, some text here saying how cool I am.
+                And some more bullshit.
+              </p>
+              <a href="#about" class="home__scroll">
+                <div class="home__scroll-box">
+                  <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
+                </div>
+                <span class="home__scroll-text">Scroll Down</span>
+              </a>
+            </div>
+          </div>
         </section>
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
-
+          <div class="about__container container grid">
+            <h2 class="section__title-1">
+              <span>About Me.</span>
+            </h2>
+            <div class="about__perfil">
+              <div class="about__image">
+                <img src="assets/img/iratxe.jpeg" alt="image" class="about__img">
+                <div class="about__shadow"></div>
+                <div class="geometric-box"></div>
+                <img src="assets/img/random-lines.svg" alt="" class="about__line">
+                <div class="about__box"></div>
+              </div>
+            </div>
+            <div class="about__info">
+              <p class="about__description">
+                Passionate about creating <b>Web Pages</b> with cool designs.
+                I have 7 years of experience in bla bla bla.
+              </p>
+              <ul class="about__list">
+                <div class="about__item">
+                  <li><b>My Skills Are: </b> HTML, CSS, JavaScript, Ruby,
+                    Ruby on Rails, Git & GitHub, Bootstrap & Stimulus.</li>
+                </div>
+              </ul>
+              <div class="about__buttons">
+                <a href="#contact" class="button">
+                  <i class="fa-solid fa-paper-plane" style="color: #ffffff;"></i> Contact Me
+                </a>
+                <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="button__ghost">
+                  <i class="fa-brands fa-linkedin-in" style="color: #000000;"></i>
+                </a>
+              </div>
+            </div>
+          </div>
         </section>
 
         <!--==================== SERVICES ====================-->
         <section class="services section">
+          <h2 class="section__title-2">
+            <span>Services.</span>
+          </h2>
+          <div class="services__container container grid">
 
+            <article class="services__card">
+              <div class="services__border"></div>
+
+              <div class="services__content">
+                <div class="services__icon">
+                  <div class="services__box"></div>
+                    <i class="ri-layout-line"></i>
+                </div>
+                <h2 class="services__title">Web Design</h2>
+                <p class="services__description">
+                  Beautiful and elegant designs with
+                  interfaces that are intuitive, efficient
+                  and pleasant to use for the user.
+                </p>
+              </div>
+            </article>
+
+            <article class="services__card">
+              <div class="services__border"></div>
+              <div class="services__content">
+                <div class="services__icon">
+                  <div class="services__box"></div>
+                    <i class="ri-code-box-line"></i>
+                  </div>
+                  <h2 class="services__title">Development</h2>
+                  <p class="services__description">
+                    Custom web development tailored to your
+                    specifications, designed to provide a
+                    flawless user experience.
+                  </p>
+              </div>
+            </article>
+
+            <article class="services__card">
+              <div class="services__border"></div>
+              <div class="services__content">
+                <div class="services__icon">
+                  <div class="services__box"></div>
+                    <i class="ri-smartphone-line"></i>
+                  </div>
+                  <h2 class="services__title">Mobile App</h2>
+                  <p class="services__description">
+                    Design and transform website projects
+                    into mobile apps to provide a seamless
+                    user experience.
+                  </p>
+              </div>
+            </article>
+          </div>
         </section>
 
         <!--==================== PROJECTS ====================-->
