--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <i class="fa-brands fa-github" style="color: #ffffff;"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i>
+                  <i class="ri-linkedin-fill"></i>
                 </a>
               </div>
             </div>
@@ -123,10 +123,10 @@
               </ul>
               <div class="about__buttons">
                 <a href="#contact" class="button">
-                  <i class="fa-solid fa-paper-plane" style="color: #ffffff;"></i> Contact Me
+                  <i class="ri-send-plane-fill"></i> Contact Me
                 </a>
                 <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="button__ghost">
-                  <i class="fa-brands fa-linkedin-in" style="color: #000000;"></i>
+                  <i class="ri-linkedin-fill"></i>
                 </a>
               </div>
             </div>
@@ -193,12 +193,192 @@
 
         <!--==================== PROJECTS ====================-->
         <section class="projects section" id="projects">
+          <h2 class="section__title-1">
+            <span>Projects.</span>
+          </h2>
+          <div class="projects__container container grid">
+            <article class="projects__card">
+              <div class="projects__image">
+                <img src="assets/img/project-1.jpg" alt="" class="projects__img">
+                <a href="#" class="projects__button button">
+                  <i class="ri-arrow-right-up-line"></i>
+                </a>
+              </div>
+              <div class="projects__content">
+                <h3 class="projects__subtitle">Neurodivergent skill sharing</h3>
+                <h2 class="projects__title">Skill Swap</h2>
+                <p class="projects__description">
+                  Project that you carry out in the designed
+                  and structure of the layout, showing the
+                  design at the client's request.
+                </p>
+              </div>
+              <div class="projects__buttons">
+                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                  <i class="ri-github-line"></i>
+                </a>
+                <a href="https://dribbble.com/" target="_blank" class="projects__link">
+                  <i class="ri-dribbble-line"></i>
+                </a>
+              </div>
+            </article>
 
+            <article class="projects__card">
+              <div class="projects__image">
+                <img src="assets/img/project-2.jpg" alt="" class="projects__img">
+                <a href="#" class="projects__button button">
+                  <i class="ri-arrow-right-up-line"></i>
+                </a>
+              </div>
+              <div class="projects__content">
+                <h3 class="projects__subtitle"></h3>
+                <h2 class="projects__title"></h2>
+                <p class="projects__description">
+                  Project that you carry out in the designed
+                  and structure of the layout, showing the
+                  design at the client's request.
+                </p>
+              </div>
+              <div class="projects__buttons">
+                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                  <i class="ri-github-line"></i>
+                </a>
+                <a href="https://dribbble.com/" target="_blank" class="projects__link">
+                  <i class="ri-dribbble-line"></i>
+                </a>
+              </div>
+            </article>
+
+            <article class="projects__card">
+              <div class="projects__image">
+                <img src="assets/img/project-3.jpg" alt="" class="projects__img">
+                <a href="#" class="projects__button button">
+                  <i class="ri-arrow-right-up-line"></i>
+                </a>
+              </div>
+              <div class="projects__content">
+                <h3 class="projects__subtitle"></h3>
+                <h2 class="projects__title"></h2>
+                <p class="projects__description">
+                  Project that you carry out in the designed
+                  and structure of the layout, showing the
+                  design at the client's request.
+                </p>
+              </div>
+              <div class="projects__buttons">
+                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                  <i class="ri-github-line"></i>
+                </a>
+                <a href="https://dribbble.com/" target="_blank" class="projects__link">
+                  <i class="ri-dribbble-line"></i>
+                </a>
+              </div>
+            </article>
+
+            <article class="projects__card">
+              <div class="projects__image">
+                <img src="assets/img/project-1.jpg" alt="" class="projects__img">
+                <a href="#" class="projects__button button">
+                  <i class="ri-arrow-right-up-line"></i>
+                </a>
+              </div>
+              <div class="projects__content">
+                <h3 class="projects__subtitle">App</h3>
+                <h2 class="projects__title">Yoga App</h2>
+                <p class="projects__description">
+                  Project that you carry out in the designed
+                  and structure of the layout, showing the
+                  design at the client's request.
+                </p>
+              </div>
+              <div class="projects__buttons">
+                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                  <i class="ri-github-line"></i>
+                </a>
+                <a href="https://dribbble.com/" target="_blank" class="projects__link">
+                  <i class="ri-dribbble-line"></i>
+                </a>
+              </div>
+
+            </article>
+          </div>
         </section>
 
         <!--==================== CONTACT ====================-->
         <section class="contact section" id="contact">
+          <div class="contact__container grid">
+            <div class="contact__data">
+              <h2 class="section__title-2">
+                <span>Contact Me.</span>
+              </h2>
+              <p class="contact__description-1">
+                I will read all emails. Send me any
+                message you want and I'll get back to you.
+              </p>
+              <p class="contact__description-2">
+                I need your <b>Name</b> and <b>Email Address</b>, but
+                you won't receive anything other than your reply.
+              </p>
+              <div class="geometric-box"></div>
+            </div>
+            <div class="contact__mail">
+              <h2 class="contact__title">
+                Send Me A Message
+              </h2>
+              <form action="" class="contact__form" id="contact-form">
+                <div class="contact__group">
 
+                  <div class="contact__box">
+                    <input type="text" name="user_name" class="contact__input" id="name" required placeholder="Name">
+                    <label for="name" class="contact__label">Name</label>
+                  </div>
+
+                  <div class="contact__box">
+                    <input type="email" name="user_email" class="contact__input" id="email" required placeholder="Email Address">
+                    <label for="email" class="contact__label">Email Address</label>
+                  </div>
+
+                  <div class="contact__box">
+                    <input type="text" name="user_subject" class="contact__input" id="subject" required placeholder="Subject">
+                    <label for="subject" class="contact__label">Subject</label>
+                  </div>
+
+                  <div class="contact__box contact__area">
+                    <textarea name="user_message" id="message" class="contact__input" required placeholder="Message"></textarea>
+                    <label for="message" class="contact__label">Message</label>
+                  </div>
+
+                </div>
+                <button type="submit" class="contact__button button">
+                  <i class="ri-send-plane-fill"></i>Send Message
+                </button>
+              </form>
+            </div>
+            <div class="contact__social">
+              <img src="assets/img/curved-arrow.svg" alt="" class="contact__social-arrow">
+              <div class="contact__social-data">
+                <div>
+                  <p class="contact__social-description-1">
+                    Does not send emails
+                  </p>
+                  <p class="contact__social-description-2">
+                    Write me on my social networks
+                  </p>
+                </div>
+                <div class="contact__social-links">
+                  <a href="" target="_blank" class="contact__social-link">
+                    <i class="ri-facebook-box-line"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="contact__social-link">
+                    <i class="ri-linkedin-box-line"></i>
+                  </a>
+                  <a href="" target="_blank" class="contact__social-link">
+                    <i class="ri-instagram-line"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </main>
 
