--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <textarea name="user_message" id="message" class="contact__input" required placeholder="Message"></textarea>
                     <label for="message" class="contact__label">Message</label>
                   </div>
-
+                  <p class="contact__message" id="contact-message"></p>
                 </div>
                 <button type="submit" class="contact__button button">
                   <i class="ri-send-plane-fill"></i>Send Message
@@ -394,7 +394,9 @@
       <script src=""></script>
 
       <!--=============== EMAIL JS ===============-->
+      <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
+      <!--=============== MAIN JS ===============-->
       <script src="https://kit.fontawesome.com/8a254c70e9.js" crossorigin="anonymous"></script>
       <script src="assets/js/main.js"></script>
   </body>
