--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
       <!--=============== ICONS ===============-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.7.0/remixicon.css">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -21,14 +20,14 @@
         <nav class="nav container">
           <a href="#" class="nav__logo">
             <span class="nav__logo-circle">I</span>
-            <span class="nav__logo-name">Iratxe Garrido</span>
+            <span class="nav__logo-name">Iratxe Garrido.</span>
           </a>
           <div class="nav__menu" id="nav-menu">
             <span class="nav__title">Menu</span>
             <h3 class="nav__name">Iratxe</h3>
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#home" class="nav__link">Home</a>
+                <a href="#home" class="nav__link active-link">Home</a>
               </li>
               <li class="nav__item">
                 <a href="#about" class="nav__link">About Me</a>
@@ -37,19 +36,22 @@
                 <a href="#projects" class="nav__link">Projects</a>
               </li>
               <li class="nav__item">
-                <a href="#contact" class="nav__link">Contact</a>
+                <a href="#contact" class="nav__link nav__link-button">Contact Me</a>
               </li>
             </ul>
             <!-- Close Button -->
             <div class="nav__close" id="nav-close">
-              <i class="fa-solid fa-xmark"></i>
+              <i class="ri-close-line"></i>
             </div>
-
           </div>
+
           <div class="nav__buttons">
+            <!-- Theme Button -->
+            <i class="ri-moon-line change-theme" id="theme-button"></i>
+
             <!-- Toggle Button -->
             <div class="nav__toggle" id="nav-toggle">
-              <i class="fa-solid fa-bars"></i>
+              <i class="ri-menu-4-line"></i>
             </div>
           </div>
         </nav>
@@ -73,7 +75,7 @@
               </div>
               <div class="home__social">
                 <a href="https://github.com/IratxeGarrido" target="_blank" class="home__social-link">
-                  <i class="fa-brands fa-github" style="color: #ffffff;"></i>
+                  <i class="ri-github-fill"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="home__social-link">
                   <i class="ri-linkedin-fill"></i>
@@ -87,7 +89,7 @@
               </p>
               <a href="#about" class="home__scroll">
                 <div class="home__scroll-box">
-                  <i class="fa-solid fa-angle-down" style="color: #ffffff;"></i>
+                  <i class="ri-arrow-drop-down-line"></i>
                 </div>
                 <span class="home__scroll-text">Scroll Down</span>
               </a>
@@ -337,6 +339,7 @@
                     <input type="email" name="user_email" class="contact__input" id="email" required placeholder="Email Address">
                     <label for="email" class="contact__label">Email Address</label>
                   </div>
+                </div>
 
                   <div class="contact__box">
                     <input type="text" name="user_subject" class="contact__input" id="subject" required placeholder="Subject">
@@ -348,7 +351,6 @@
                     <label for="message" class="contact__label">Message</label>
                   </div>
                   <p class="contact__message" id="contact-message"></p>
-                </div>
                 <button type="submit" class="contact__button button">
                   <i class="ri-send-plane-fill"></i>Send Message
                 </button>
@@ -384,20 +386,36 @@
 
       <!--==================== FOOTER ====================-->
       <footer class="footer">
-
+        <div class="footer__container container grid">
+          <ul class="footer__links">
+            <li>
+              <a href="#home" class="footer__link">Home</a>
+            </li>
+            <li>
+              <a href="#about" class="footer__link">About</a>
+            </li>
+            <li>
+              <a href="#projects" class="footer__link">Projects</a>
+            </li>
+          </ul>
+          <span class="footer__copy">
+            Made with <i class="ri-heart-3-fill icon-color"></i> by Iratxe.
+          </span>
+        </div>
       </footer>
 
       <!--========== SCROLL UP ==========-->
-
+      <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-s-line"></i>
+      </a>
 
       <!--=============== SCROLLREVEAL ===============-->
-      <script src=""></script>
+      <script src="assets/js/scrollreveal.min.js"></script>
 
       <!--=============== EMAIL JS ===============-->
       <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
-      <script src="https://kit.fontawesome.com/8a254c70e9.js" crossorigin="anonymous"></script>
       <script src="assets/js/main.js"></script>
   </body>
 </html>
