First round done

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+      <link rel="shortcut icon" href="assets/img/letter-i.png" type="image/x-icon">
 
       <!--=============== ICONS ===============-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.7.0/remixicon.css">
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Portfolio Iratxe Garrido</title>
+      <title>Iratxe Garrido</title>
   </head>
   <body>
       <!--==================== HEADER ====================-->
@@ -84,8 +84,19 @@
             </div>
             <div class="home__info">
               <p class="home__description">
-                <b>Fullstack Developer</b>, some text here saying how cool I am.
-                And some more bullshit.
+                <!-- <b>Fullstack Developer</b>, with background in IT-Security.
+                After 7 years of hacking I decided
+                to go back to coding and building apps instead of breaking them. -->
+
+                <!--
+                  <b>Fullstack Developer</b> skilled in IT Security.
+                  Transitioning from 7 years of hacking, I'm now dedicated
+                  to coding and app development.
+                -->
+                <b>Fullstack Developer</b> with expertise in IT Security.
+                After 7 years of hacking, I've redirected my skills to
+                coding and app building.
+
               </p>
               <a href="#about" class="home__scroll">
                 <div class="home__scroll-box">
@@ -114,8 +125,8 @@
             </div>
             <div class="about__info">
               <p class="about__description">
-                Passionate about creating <b>Web Pages</b> with cool designs.
-                I have 7 years of experience in bla bla bla.
+                Passionate about building and breaking <b>applications</b>.
+                I like learning new skills and sharing my knowledge with other people.
               </p>
               <ul class="about__list">
                 <div class="about__item">
@@ -135,10 +146,10 @@
           </div>
         </section>
 
-        <!--==================== SERVICES ====================-->
+        <!--==================== SKILLS ====================-->
         <section class="services section">
           <h2 class="section__title-2">
-            <span>Services.</span>
+            <span>Skills.</span>
           </h2>
           <div class="services__container container grid">
 
@@ -150,11 +161,11 @@
                   <div class="services__box"></div>
                     <i class="ri-layout-line"></i>
                 </div>
-                <h2 class="services__title">Web Design</h2>
+                <h2 class="services__title">Fullstack Development</h2>
                 <p class="services__description">
-                  Beautiful and elegant designs with
-                  interfaces that are intuitive, efficient
-                  and pleasant to use for the user.
+                  Creating solutions that enhance everyday life makes me happy.
+                  I find fulfillment in delving into the intricacies of an application and
+                  comprehending each step to better understand the big picture.
                 </p>
               </div>
             </article>
@@ -166,11 +177,12 @@
                   <div class="services__box"></div>
                     <i class="ri-code-box-line"></i>
                   </div>
-                  <h2 class="services__title">Development</h2>
+                  <h2 class="services__title">Analytical thinking</h2>
                   <p class="services__description">
-                    Custom web development tailored to your
-                    specifications, designed to provide a
-                    flawless user experience.
+                    I love deconstructing and understanding all sorts of problems,
+                    whether it's a 'broken' rice cooker, a system I want to hack into,
+                    a piece of code that doesn't quite work how it's supposed to,
+                    or a climbing route that I don't really know how to start yet.
                   </p>
               </div>
             </article>
@@ -180,14 +192,14 @@
               <div class="services__content">
                 <div class="services__icon">
                   <div class="services__box"></div>
-                    <i class="ri-smartphone-line"></i>
+                    <i class="ri-megaphone-line"></i>
                   </div>
-                  <h2 class="services__title">Mobile App</h2>
+                  <h2 class="services__title">Mentoring & public speaking</h2>
                   <p class="services__description">
-                    Design and transform website projects
-                    into mobile apps to provide a seamless
-                    user experience.
-                  </p>
+                    Engaging in mentorship allows me to share my experiences
+                    and guide others, and witnessing their growth is genuinely
+                    rewarding. Public speaking provides a platform to inspire
+                    and connect with a broader audience.
               </div>
             </article>
           </div>
@@ -201,108 +213,77 @@
           <div class="projects__container container grid">
             <article class="projects__card">
               <div class="projects__image">
-                <img src="assets/img/project-1.jpg" alt="" class="projects__img">
-                <a href="#" class="projects__button button">
+                <img src="assets/img/skill-swap.png" alt="" class="projects__img">
+                <a href="https://skill-swap-app-0157fa39a6e9.herokuapp.com/" class="projects__button button">
                   <i class="ri-arrow-right-up-line"></i>
                 </a>
               </div>
               <div class="projects__content">
-                <h3 class="projects__subtitle">Neurodivergent skill sharing</h3>
+                <h3 class="projects__subtitle">Skill sharing app</h3>
                 <h2 class="projects__title">Skill Swap</h2>
                 <p class="projects__description">
-                  Project that you carry out in the designed
-                  and structure of the layout, showing the
-                  design at the client's request.
+                  Web app where users can share their knowledge and materials with
+                  other peers to reduce the threshold for starting new hobbies and
+                  swipe other user's skills. Implemented swiping functionality
+                  both frontend with JavaScript and backend with Ruby
                 </p>
               </div>
               <div class="projects__buttons">
-                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                <a href="https://github.com/IratxeGarrido/skill-swap" target="_blank" class="projects__link">
                   <i class="ri-github-line"></i>
-                </a>
-                <a href="https://dribbble.com/" target="_blank" class="projects__link">
-                  <i class="ri-dribbble-line"></i>
                 </a>
               </div>
             </article>
 
             <article class="projects__card">
               <div class="projects__image">
-                <img src="assets/img/project-2.jpg" alt="" class="projects__img">
-                <a href="#" class="projects__button button">
+                <img src="assets/img/furries.png" alt="" class="projects__img">
+                <a href="https://airbnb-zoems-1612df5250d2.herokuapp.com/" target="_blank" class="projects__button button">
                   <i class="ri-arrow-right-up-line"></i>
                 </a>
               </div>
               <div class="projects__content">
-                <h3 class="projects__subtitle"></h3>
-                <h2 class="projects__title"></h2>
+                <h3 class="projects__subtitle">Airbnb Clone</h3>
+                <h2 class="projects__title">Warm & Furries</h2>
                 <p class="projects__description">
-                  Project that you carry out in the designed
-                  and structure of the layout, showing the
-                  design at the client's request.
+                  Developed and deployed an AirBnB clone,
+                  featuring user-friendly booking and rental processes for
+                  "furries" on both the main page and map view. Implemented
+                  efficient handling of pending bookings, along with a
+                  tailored search function for specific furry types.
                 </p>
               </div>
               <div class="projects__buttons">
-                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                <a href="https://github.com/zoems/airbnb" target="_blank" class="projects__link">
                   <i class="ri-github-line"></i>
-                </a>
-                <a href="https://dribbble.com/" target="_blank" class="projects__link">
-                  <i class="ri-dribbble-line"></i>
                 </a>
               </div>
             </article>
 
             <article class="projects__card">
               <div class="projects__image">
-                <img src="assets/img/project-3.jpg" alt="" class="projects__img">
-                <a href="#" class="projects__button button">
+                <img src="assets/img/watch-list.png" alt="" class="projects__img">
+                <a href="https://github.com/IratxeGarrido/rails-watch-list" class="projects__button button">
                   <i class="ri-arrow-right-up-line"></i>
                 </a>
               </div>
               <div class="projects__content">
-                <h3 class="projects__subtitle"></h3>
-                <h2 class="projects__title"></h2>
+                <h3 class="projects__subtitle">Bookmark favorite movies</h3>
+                <h2 class="projects__title">Watch List</h2>
                 <p class="projects__description">
-                  Project that you carry out in the designed
-                  and structure of the layout, showing the
-                  design at the client's request.
+                  It's a 3-model Rails application where the user can bookmark
+                  their favorite movies in lists. The movies are seeded using an API.
+                  Users can write reviews about the lists.
                 </p>
               </div>
               <div class="projects__buttons">
-                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
+                <a href="https://github.com/IratxeGarrido/rails-watch-list" target="_blank" class="projects__link">
                   <i class="ri-github-line"></i>
-                </a>
-                <a href="https://dribbble.com/" target="_blank" class="projects__link">
-                  <i class="ri-dribbble-line"></i>
                 </a>
               </div>
             </article>
 
-            <article class="projects__card">
-              <div class="projects__image">
-                <img src="assets/img/project-1.jpg" alt="" class="projects__img">
-                <a href="#" class="projects__button button">
-                  <i class="ri-arrow-right-up-line"></i>
-                </a>
-              </div>
-              <div class="projects__content">
-                <h3 class="projects__subtitle">App</h3>
-                <h2 class="projects__title">Yoga App</h2>
-                <p class="projects__description">
-                  Project that you carry out in the designed
-                  and structure of the layout, showing the
-                  design at the client's request.
-                </p>
-              </div>
-              <div class="projects__buttons">
-                <a href="https://github.com/IratxeGarrido" target="_blank" class="projects__link">
-                  <i class="ri-github-line"></i>
-                </a>
-                <a href="https://dribbble.com/" target="_blank" class="projects__link">
-                  <i class="ri-dribbble-line"></i>
-                </a>
-              </div>
 
-            </article>
           </div>
         </section>
 
@@ -364,19 +345,19 @@
                     Does not send emails
                   </p>
                   <p class="contact__social-description-2">
-                    Write me on my social networks
+                    Write me on LinkedIn
                   </p>
                 </div>
                 <div class="contact__social-links">
-                  <a href="" target="_blank" class="contact__social-link">
+                  <!-- <a href="" target="_blank" class="contact__social-link">
                     <i class="ri-facebook-box-line"></i>
-                  </a>
+                  </a> -->
                   <a href="https://www.linkedin.com/in/iratxe-garrido/" target="_blank" class="contact__social-link">
                     <i class="ri-linkedin-box-line"></i>
                   </a>
-                  <a href="" target="_blank" class="contact__social-link">
+                  <!-- <a href="" target="_blank" class="contact__social-link">
                     <i class="ri-instagram-line"></i>
-                  </a>
+                  </a> -->
                 </div>
               </div>
             </div>
@@ -403,6 +384,7 @@
           </span>
         </div>
       </footer>
+
 
       <!--========== SCROLL UP ==========-->
       <a href="#" class="scrollup" id="scroll-up">
